# pkg/crud/types.go
@@ -74,6 +74,8 @@ type Interface interface {
 	// MultiCreate creates multiple items in one shot
 	// if replace is set to true, then items are removed in backend prior to creating, if they exist.
 	MultiCreate(ctx context.Context, entity string, replace bool, objs []api.UntypedDto) error
+	// QueryNamed executes named query that was provided in configuration.
+	QueryNamed(ctx context.Context, name string, args ...interface{}) ([]api.UntypedDto, error)
 }
 
 type NameToCrudMap map[string]Interface
